# cargo-countlines

./: .gitignore  Cargo.toml  LICENSE  README.md
language_packs/: default.json
src/: count.rs  languages.rs  main.rs  table.rs  util.rs
