[package]
name = "cargo-countlines"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
env_logger = "0.11.8"
globset = "0.4.16"
indicatif = "0.18.0"
log = "0.4.27"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
tabled = "0.20.0"
thiserror = "2.0.12"
walkdir = "2.5.0"

[profile.release]
debug = "line-tables-only"
